--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Todo List</title>
-  <style>
+ <style>
     /* Main styles */
     .todo-list {
       list-style-type: none;
@@ -11,14 +11,12 @@
       display: flex;
       justify-content: space-between;
     }
-
     .todo-column {
       flex: 1;
       background-color: #f2f2f2;
       padding: 10px;
       margin-right: 10px;
     }
-
     .todo-item {
       background-color: #f2f2f2;
       padding: 10px;
@@ -29,11 +27,9 @@
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       transition: background-color 0.3s ease;
     }
-
     .todo-item:hover {
       background-color: #e6e6e6;
     }
-
     .delete-btn {
       position: absolute;
       right: 5px;
@@ -42,7 +38,6 @@
       color: red;
       display: none;
     }
-
     .todo-item:hover .delete-btn {
       display: block;
     }
@@ -50,8 +45,8 @@
     /* Additional styles */
     body {
       font-family: Arial, sans-serif;
+      transition: background-color 0.3s ease; /* Add transition for smooth theme change */
     }
-
     footer {
       text-align: center;
       margin-top: 20px;
@@ -62,11 +57,9 @@
       background-color: #1a1a1a;
       color: #fff;
     }
-
     .todo-column.dark-theme {
       background-color: #333;
     }
-
     .todo-item.dark-theme {
       background-color: #333;
       box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
