--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
       columnItems.appendChild(newTask);
       newTaskInput.value = '';
       newTask.addEventListener('dragstart', drag);
+      saveTaxiData(); // Вызов функции сохранения данных
+    }
+
+    function saveTaxiData() {
+      const taxiItems = Array.from(document.getElementById('column1-items').querySelectorAll('li'));
+      const taxiData = taxiItems.map(item => item.textContent);
+      localStorage.setItem('taxiData', JSON.stringify(taxiData));
     }
   </script>
 </body>
