--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </ul>
     </div>
   </div>
-  <footer>Created by [Your Name]</footer>
+  <footer>Created by Mazunin Andrey</footer>
 
   <script>
     let isDarkTheme = false;
